Creating swagger to Vacancies get
